--- a/index.html
+++ b/index.html
@@ -9,17 +9,10 @@
   <title>Eu&Ela</title>
 </head>
 
-<div class="carousel">
-  <div class="carousel-inner">
-    <img src="assets/example.jpeg" alt="Foto 01">
-    <img src="assets/example.jpeg" alt="Foto 01">
-    <img src="assets/example.jpeg" alt="Foto 01">
-  </div>
-
 </div>
   <div class="container">
    <div class="cabecalho">
-    <img src="" alt="">
+    <img src="assets/Logo.jpg">
     <h1 class="cabecalho__titulo">Gabriel & Jamilly</h1>
     <p class="cabecalho__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum a tempora expedita! Sequi molestiae quisquam
       nesciunt! Dolor mollitia doloribus voluptates pariatur, architecto voluptas nihil unde commodi odit ipsam
@@ -27,11 +20,11 @@
       alias labore amet doloribus aspernatur rerum libero, quae sapiente?</p>
    </div>
    <div class="button">
-    <h2 class="titulo__botao">Juntos há</h2>
-     <button class="button__dias">01</button>
-     <button class="button__dias">02</button>
-     <button class="button__dias">03</button>
-     <button class="button__dias">04</button>
+      <h2 class="titulo__botao">QUANTIDADE DE TEMPO</h2>
+      <button class="button__dias">01</button>
+      <button class="button__dias">02</button>
+      <button class="button__dias">03</button>
+      <button class="button__dias">04</button>
    </div>
   </div>
 </body>
